[tool.poetry]
name = "path-finder"
version = "0.1.0"
description = ""
authors = ["tom.cheng <cp5670681@163.com>"]
readme = "README.md"
packages = []  # 不打包任何模块（可选）
package-mode = false

[tool.poetry.dependencies]
python = ">=3.12"
fastapi = ">=0.115.13,<0.116.0"
uvicorn = { extras = ["standard"], version = ">=0.34.3,<0.35.0" }
sqlmodel = ">=0.0.24,<0.0.25"
psycopg2 = ">=2.9.10,<3.0.0"
python-dotenv = ">=1.1.0,<2.0.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
